--- a/src/Topxia/AdminBundle/Resources/views/OpenCourseAnalysis/layout.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/OpenCourseAnalysis/layout.html.twig
@@ -5,6 +5,12 @@
 
 {% block main %}
 	{% block top %}
+		<div class="btn-group mbm" role="group" aria-label="...">
+		   <a class="btn btn-default active" href="{{path('admin_opencourse_analysis_referer')}}" role="button">来源分析</a>
+		   <a class="btn btn-default" href="{{path('admin_opencourse_analysis_referer')}}" role="button">购买转化分析</a>
+		   <a class="btn btn-default" href="{{path('admin_opencourse_analysis_referer')}}" role="button">观看统计</a>
+		</div>
+
 		<form id="user-search-form" class="form-inline well well-sm" action="" method="get" novalidate="">
 		     <div class="form-group ">
 		      <label for="startDate">起始日期</label>
@@ -18,11 +24,7 @@
 		  	<button class="btn btn-primary">搜索</button>
 		</form>
 
-		<div class="btn-group" role="group" aria-label="...">
-		   <a class="btn btn-default active" href="{{path('admin_opencourse_analysis_referer')}}" role="button">来源分析</a>
-		   <a class="btn btn-default" href="{{path('admin_opencourse_analysis_referer')}}" role="button">购买转化分析</a>
-		   <a class="btn btn-default" href="{{path('admin_opencourse_analysis_referer')}}" role="button">观看统计</a>
-		</div>
+		
 	{% endblock %}
 	{% block analysis_content %}
 
