去掉所有ｊｓ引入的header.js,在header.html.twig页面，引入

--- a/src/Topxia/WebBundle/Resources/views/Course/header.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Course/header.html.twig
@@ -1,5 +1,5 @@
 {% import "TopxiaWebBundle::macro.html.twig" as web_macro %}
-
+ {{ load_script('course-manage/header') }}
 <div class="es-section course-manage-header clearfix">
   <a href="{{ path('course_show', {id:course.id}) }}">
     <img class="picture" src="{{ filepath(course.largePicture, 'course.png') }}" />
