--- a/web/assets/v2/less/module/es-bar.less
+++ b/web/assets/v2/less/module/es-bar.less
@@ -212,7 +212,9 @@
       border: none;
     }
     .notification-footer {
-      display: none;
+      // display: none;
+      margin-top: 5px;
+      color: @gray;
     }
     >i {
       position: absolute;
