--- a/web/assets/v2/less/plugin/select2.less
+++ b/web/assets/v2/less/plugin/select2.less
@@ -6,7 +6,7 @@
   float: none;
 }
 
-.select2-container-active .select2-choice, .select2-container-active .select2-choices, .select2-drop-active { {
+.select2-container-active .select2-choice, .select2-container-active .select2-choices, .select2-drop-active {
   border-color: @brand-primary !important;
 }
 
