修复查看用户个人信息model框显示bug

--- a/src/Topxia/WebBundle/Resources/views/CourseStudentManage/show-modal.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/CourseStudentManage/show-modal.html.twig
@@ -108,7 +108,9 @@
 		<th>{{'自我介绍'|trans}}</th>
 		<td>
 		{% if profile.about %}
+				<div class="editor-text">
 				{{ profile.about | raw }}
+				</div>
 			{% else %}
 				{{'暂无'|trans}}
 			{% endif %}
