--- a/src/Topxia/AdminBundle/Resources/views/User/show-modal.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/User/show-modal.html.twig
@@ -200,7 +200,9 @@
     <th>自我介绍</th>
     <td>
     {% if profile.about %}
+      <div class="editor-text">
         {{ profile.about | raw }}
+      </div>
       {% else %}
         暂无
       {% endif %}
