--- a/src/Topxia/WebBundle/Resources/views/CourseStudentManage/defined-show-modal.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/CourseStudentManage/defined-show-modal.html.twig
@@ -89,7 +89,9 @@
 			<th>{{'自我介绍'|trans}}</th>
 			<td>
 				{% if profile.about %}
+					<div class="editor-text">
 					{{ profile.about }}
+					</div>
 				{% else %}
 					{{'暂无'|trans}}
 				{% endif %}
