--- a/src/Topxia/AdminBundle/Resources/views/OpenCourseAnalysis/Referer/list.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/OpenCourseAnalysis/Referer/list.html.twig
@@ -22,17 +22,27 @@
 			<a class="btn btn-default active" href="{{path('admin_opencourse_analysis_referer_list')}}" role="button">明细</a>
 	 	</div>
 
-		<div  class= "col-md-5" id="echats-pie" style="height: 300px; width: 500px;"></div>
-		<div  class= "col-md-5">
+		<div >
 			<table class="table table-hover">
 				<thead>
 					<tr>
-						<th>来源</th>
-						<th>来源数</th>
-						<th>占比</th>
+						<th width="40%">课程名称</th>
+						<th>访问数</th>
+						<th>购买转化数</th>
+						<th>购买转化率</th>
 					</tr>
 				</thead>
 				<tbody>
+					{% for refererlog in refererlogDatas %}
+						<tr>
+							<th scope="row">{{openCourses[refererlog.targetId].title }}</th>
+							<th>{{refererlog.count}}</th>
+							<th>{{refererlog.orderCount}}</th>
+							<th>{{refererlog.percent}}</th>
+						</tr>
+						{% else %} 
+						  <tr><td colspan="20"><div class="empty">暂无记录</div></td></tr>
+       				{% endfor %}
 				</tbody>
 			</table>
 		</div>
