--- a/src/Topxia/WebBundle/Resources/views/Review/Widget/list.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Review/Widget/list.html.twig
@@ -4,7 +4,7 @@
     <button class="btn btn-primary btn-sm pull-right js-show-review-form" {% if not userReview %}style="display:none;"{% endif %}>{{'重新评价'|trans}}</button>
   </div>
 
-  <form id="review-form" method="post" action="{{ reviewSaveUrl }}" {% if userReview %}style="display:none;"{% endif %}>
+  <form id="review-form" method="post" action="{{ reviewSaveUrl }}" onsubmit="return document.readyState == 'complete'" {% if userReview %}style="display:none;"{% endif %}>
     <div class="form-group controls">
       {{'请打分：'|trans}} <span data-rating="{{ userReview.rating|default(0) }}" data-img-path="{{ app.request.basePath ~ '/assets/img/raty'}}" class="rating-btn"></span>
       <input type="hidden" name="rating" value="{{ userReview.rating|default(0) }}">
@@ -16,7 +16,7 @@
 
     <div class="form-group clearfix">
       <span class="text-success pull-left" style="display: none;">{{'评价已保存！'|trans}}</span>
-      <button type="button" class="btn btn-primary pull-right js-btn-save" data-loading-text="{{'正在保存'|trans}}..." autocomplete="off">{{'保存'|trans}}</button>
+      <button type="submit" class="btn btn-primary pull-right" data-loading-text="{{'正在保存'|trans}}..." autocomplete="off">{{'保存'|trans}}</button>
       <button class="btn btn-link pull-right js-hide-review-form" type="button" {% if userReview %}style="display:none;"{% endif %}>{{'取消'|trans}}</button>
     </div>
 
