#12937 按照编码规范重新修改，不要在html中直接写js

--- a/src/Topxia/WebBundle/Resources/views/Review/Widget/list.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Review/Widget/list.html.twig
@@ -16,8 +16,8 @@
 
     <div class="form-group clearfix">
       <span class="text-success pull-left" style="display: none;">{{'评价已保存！'|trans}}</span>
-      <button type="submit" class="btn btn-primary pull-right" data-loading-text="{{'正在保存'|trans}}..." autocomplete="off">{{'保存'|trans}}</button>
-      <button class="btn btn-link pull-right js-hide-review-form" type="button" {% if userReview %}style="display:none;"{% endif %}>{{'取消'|trans}}</button>
+      <a href="javascript:;" class="btn btn-primary pull-right js-btn-save" data-loading-text="{{'正在保存'|trans}}..." autocomplete="off">{{'保存'|trans}}</a>
+      <a href="javascript:;" class="btn btn-link pull-right js-hide-review-form" {% if userReview %}style="display:none;"{% endif %}>{{'取消'|trans}}</a>
     </div>
 
     <input type="hidden" name="_csrf_token" value="{{ csrf_token('site') }}">
