--- a/src/Classroom/ClassroomBundle/Resources/views/Classroom/Review/do.html.twig
+++ b/src/Classroom/ClassroomBundle/Resources/views/Classroom/Review/do.html.twig
@@ -8,7 +8,7 @@
   </div>
 
     <div >
-     <form id="review-form" method="post" action="{{ path('classroom_reviews', {id:classroom.id}) }}" onsubmit="return document.readyState == 'complete'" {% if review %} style="display:none;"{% endif %}>
+     <form id="review-form" method="post" action="{{ path('classroom_reviews', {id:classroom.id}) }}" {% if review %} style="display:none;"{% endif %}>
       {{ web_macro.flash_messages() }}
 
     <div class="form-group clearfix">
