--- a/web/assets/libs/jquery-plugin/select2/3.4.1/select2-debug.css
+++ b/web/assets/libs/jquery-plugin/select2/3.4.1/select2-debug.css
@@ -687,5 +687,7 @@ disabled look for disabled choices in the results dropdown
     width: 75%;
 }
 .select2-tree-icon {
+    display: inline-block;
+    width: 14px;
     color: #333;
 }
