--- a/src/Topxia/AdminBundle/Resources/views/OpenCourseAnalysis/Referer/detail.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/OpenCourseAnalysis/Referer/detail.html.twig
@@ -37,7 +37,34 @@
 			<input id="data"  type="hidden" value="{% if refererlogDetailDatas %} {{refererlogDetailDatas}} {% endif %}">
 			<input id="dataName" type="hidden" value="{% if refererlogNames %} {{refererlogNames}} {% endif %}">
 		</div>
-    </div>    
+    </div> 
+    <div class="row form-group referer-log-list">
+		<table class="table table-hover">
+			<thead>
+				<tr>
+					<th>来源</th>
+					<th>来源数</th>
+					<th>占比</th>
+					<th>购买转化数</th>
+					<th>购买转化率</th>
+				</tr>
+			</thead>
+			<tbody>
+				{% for refererlog in refererloglist %}
+					<tr>
+						<th scope="row">{{refererlog.refererUrl}}</th>
+						<th>{{refererlog.count}}</th>
+						<th>{{refererlog.percent}}</th>
+						<th>{{refererlog.orderCount}}</th>
+						<th>{{refererlog.orderPercent}}</th>
+					</tr>
+					{% else %} 
+					  <tr><td colspan="20"><div class="empty">暂无记录</div></td></tr>
+				{% endfor %}
+			</tbody>
+		</table>
+		{{web_macro.paginator(paginator)}}
+    </div>     
 {% endblock %}
 
 {% block footer %}
