--- a/src/Topxia/AdminBundle/Resources/views/OpenCourseAnalysis/Referer/detail.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/OpenCourseAnalysis/Referer/detail.html.twig
@@ -64,7 +64,7 @@
 			</tbody>
 		</table>
 		{{web_macro.paginator(paginator)}}
-		<input id="pageinator-url" value="{{path('admin_opencourse_analysis_referer_detail_list',{id:targetId})}}">
+		<input id="pageinator-url"  type="hidden"  value="{{path('admin_opencourse_analysis_referer_detail_list',{id:targetId})}}">
     </div>     
 {% endblock %}
 
