--- a/src/Topxia/WebBundle/Resources/views/MyCourse/favorited.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/MyCourse/favorited.html.twig
@@ -5,19 +5,31 @@
 {% set tab_nav = 'favorited' %}
 
 {% block main %}
-<div class="panel panel-default panel-col">
+	<div class="panel panel-default panel-col">
 	  <div class="panel-heading">{{'我的课程'|trans}}</span></div>
-	  	<div class="panel-body">
+  	<div class="panel-body">
+  		{% include 'TopxiaWebBundle:MyCourse:nav-pill.html.twig' %}
 
-	  		 {% include 'TopxiaWebBundle:MyCourse:nav-pill.html.twig' %}
+			<ul class="course-grids course-list">
+			  {% for courseFavorite in courseFavorites if courseFavorite %}
+					{#{{ render(controller('TopxiaWebBundle:Course:coursesBlock', {courses:courses, view: 'grid'})) }}
+					{{ web_macro.paginator(paginator) }}#}
+					{% set mode = 'default' %}
+					{% if courseFavorite.type == 'course' %}
+	          {% set course = data('Course',{courseId:courseFavorite.courseId}) %}
+	          {% include 'TopxiaWebBundle:Course:Widget/my-course-grid.html.twig' %}
+	        {% elseif courseFavorite.type == 'openCourse' %}
+	          {% set course = data('OpenCourse',{courseId:courseFavorite.courseId}) %}
+	          {% include 'TopxiaWebBundle:OpenCourse/Widget:my-open-course-grid.html.twig' %}
+	        {% endif %}
+			  {% else %}
+			    <div class="empty">{{'暂无已收藏的课程'|trans}}</div>
+			  {% endfor %}
+			</ul>
+		</div>
 
- {% if courses %}
-		{{ render(controller('TopxiaWebBundle:Course:coursesBlock', {courses:courses, view: 'grid'})) }}
-		{{ web_macro.paginator(paginator) }}
-  {% else %}
-    <div class="empty">{{'暂无已收藏的课程'|trans}}</div>
-  {% endif %}
-
-</div>
-</div>
+		<nav class="text-center">
+	    {{ web_macro.paginator(paginator) }}
+	  </nav>
+	</div>
 {% endblock %}
