--- a/src/Topxia/AdminBundle/Resources/views/OpenCourseAnalysis/Referer/index.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/OpenCourseAnalysis/Referer/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'TopxiaAdminBundle:OpenCourseAnalysis:layout.html.twig' %}
 {% do load_script('open-course-analysis/referer') %}
-	
+{% set nav = 'referer' %}	
 {% block analysis_content %}
 	 <div class="">
 	 	<div  class= "" >
