--- a/src/Topxia/AdminBundle/Resources/views/OpenCourseAnalysis/layout.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/OpenCourseAnalysis/layout.html.twig
@@ -1,28 +1,28 @@
 {% extends 'TopxiaAdminBundle::layout.html.twig' %}
-{# {% set panel = 'dashboard' %}
-{% set nav = 'system' %} #}
+{# {% set panel = 'dashboard' %}#}
 {% do load_script('open-course-analysis/index') %}
 {% set menu = 'admin_operation_analysis_opencourse' %}
 
 {% block main %}
 	{% block top %}
 		<div class="btn-group mbm" role="group" aria-label="...">
-		   <a class="btn btn-default active" href="{{path('admin_opencourse_analysis_referer_summary')}}" role="button">来源分析</a>
+		   <a class="btn btn-default {% if nav  == 'referer' %}active{% endif %}" href="{{path('admin_opencourse_analysis_referer_summary')}}" role="button">来源分析</a>
 		   <a class="btn btn-default" href="{{path('admin_opencourse_analysis_referer_summary')}}" role="button">购买转化分析</a>
 		   <a class="btn btn-default" href="{{path('admin_opencourse_analysis_referer_summary')}}" role="button">观看统计</a>
 		</div>
 	{% endblock %}
 	{% block form %}
-		<form id="user-search-form" class="form-inline well well-sm" action="" method="get" novalidate="">
+		<form id="refererlog-search-form" class="form-inline well well-sm" action="" method="get" novalidate="">
 		     <div class="form-group ">
 		      <label for="startDate">起始日期</label>
 		      <input class="form-control" type="text" id="startTime" name="startTime" value="{{dateRange.startTime}}" placeholder="起始时间">
 		      <label for="endDate">截止日期</label>
 		      <input class="form-control" type="text" id="endTime" name="endTime" value="{{dateRange.endTime}}" placeholder="结束时间">
 		     </div>
-		 	<button class="btn btn-default btn-data-range" type="button" id="btn-yesterday-range" data-start="{{dateRange.yesterdayStart}}" data-end="{{dateRange.yesterdayEnd}}">昨天</button>
-		 	<button class="btn btn-default btn-data-range active" type="button" id="btn-lastWeek-range" data-start="{{dateRange.lastWeekStart}}" data-end="{{dateRange.lastWeekEnd}}">最近七天</button>
-			<button class="btn btn-default btn-data-range" type="button" id="btn-lastMonth-range" data-start="{{dateRange.lastMonthStart}}" data-end="{{dateRange.lastMonthEnd}}">最近30天</button>
+		 	<button class="btn btn-default btn-data-range {% if app.request.query.get('date-range','week') ==  'day'%}active {% endif %}"type="button" id="btn-yesterday-range" data-type= "day" data-start="{{dateRange.yesterdayStart}}" data-end="{{dateRange.yesterdayEnd}}">昨天</button>
+		 	<button class="btn btn-default btn-data-range {% if app.request.query.get('date-range','week') ==  'week'%}active {% endif %}" type="button" id="btn-lastWeek-range" data-type= "week"  data-start="{{dateRange.lastWeekStart}}" data-end="{{dateRange.lastWeekEnd}}">最近七天</button>
+			<button class="btn btn-default btn-data-range {% if app.request.query.get('date-range','week') ==  'month'%}active {% endif %}" type="button" id="btn-lastMonth-range" data-type= "month"  data-start="{{dateRange.lastMonthStart}}" data-end="{{dateRange.lastMonthEnd}}">最近30天</button>
+			<input name="date-range" type="hidden">
 		  	<button class="btn btn-primary" type="submit">搜索</button>
 		</form>
 	{% endblock form %}
