--- a/src/Topxia/WebBundle/Resources/views/OpenCourse/Widget/my-open-course-grid.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/OpenCourse/Widget/my-open-course-grid.html.twig
@@ -30,8 +30,13 @@
       {% endif %}
 
       <span class="metas clearfix">
-        
-
+        <span class="num"><i class="es-icon es-icon-removeredeye"></i>{{ course.hitNum}}</span>
+        <span class="comment mlm"><i class="es-icon es-icon-textsms"></i>{{ course.postNum }}</span>
+        <span class="course-price-widget">
+          <span class="price">
+            <span class="text-success">公开课</span>
+          </span>
+        </span>
       </span>
     {% endif %}
 
