--- a/src/Topxia/WebBundle/Resources/views/Course/Widget/my-course-grid.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Course/Widget/my-course-grid.html.twig
@@ -35,14 +35,12 @@
         {% endif %}
       {% endif %}
 
-      <div class="metas clearfix">
-        <span class="num"><i class="es-icon es-icon-people"></i>1</span>
-        <span class="comment"><i class="es-icon es-icon-textsms"></i>0</span>
-          <span class="course-price-widget">
-          <span class="price">
-            <span class="text-success">免费</span>  
-          </span>
-        </span> 
+      <span class="metas clearfix">
+        {% if setting('course.show_student_num_enabled', '1') == 1  %}
+          <span class="num"><i class="es-icon es-icon-people"></i>{{ course.studentNum }}</span>
+        {% endif %}
+        <span class="comment mlm"><i class="es-icon es-icon-textsms"></i>{{ course.ratingNum }}</span>
+        {% include 'TopxiaWebBundle:Course/Widget:course-price.html.twig' with {shows:['price'] } %}
       </span>
     {% endif %}
 
