--- a/src/Topxia/AdminBundle/Resources/views/Block/block-visual-edit.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Block/block-visual-edit.html.twig
@@ -1,21 +1,13 @@
-{% extends 'TopxiaAdminBundle::layout.html.twig' %}
+{% extends 'TopxiaAdminBundle:Block:block-visual-layout.html.twig' %}
 
 {% set menu = 'admin_block' %}
+{% set currentPage = 'admin_block_visual_edit' %}
 
 {% block page_title %} 编辑内容 {% endblock %}
 
 {% set script_controller = 'block/visual-edit' %}
 
-{% block main %}
-  <ul class="nav nav-pills mbl small">
-    <li class="active">
-      <a href="{{ path('admin_block_visual_edit',{blockTemplateId:block.blockTemplateId}) }}">编辑</a>
-
-    </li>
-    <li>
-      <a href="{{ path('admin_block_visual_edit_history',{blockTemplateId: block.blockTemplateId}) }}">历史记录</a>
-    </li>
-  </ul>
+{% block blockVisual %}
   <style type="text/css">
     .sortable-list .placeholder {
       margin: 10px 0;
