--- a/src/Topxia/AdminBundle/Resources/views/Block/block-visual-history.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Block/block-visual-history.html.twig
@@ -1,18 +1,10 @@
-{% extends 'TopxiaAdminBundle::layout.html.twig' %}
+{% extends 'TopxiaAdminBundle:Block:block-visual-layout.html.twig' %}
 
 {% set menu = 'admin_block' %}
-{% block page_title %} 编辑内容 {% endblock %}
+{% set currentPage = 'admin_block_visual_edit_history' %}
+{% block page_title %} 历史记录 {% endblock %}
 
-{% block main %}
-  <ul class="nav nav-pills mbl small">
-    <li>
-      <a href="{{ path('admin_block_visual_edit',{blockTemplateId:block.blockTemplateId}) }}">编辑</a>
-
-    </li>
-    <li class="active">
-      <a href="{{ path('admin_block_visual_edit_history',{blockTemplateId: block.blockTemplateId}) }}">历史记录</a>
-    </li>
-  </ul>
+{% block blockVisual %}
   {{ web_macro.flash_messages() }}
 
    {% if blockHistorys|default() %}
