--- a/src/Topxia/AdminBundle/Resources/views/User/index.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/User/index.html.twig
@@ -48,7 +48,7 @@
 
   <button class="btn btn-primary">搜索</button>
 
-  {% if has_permission('admin_user_export') %}
+  {% if has_permission('admin_user_export') and is_plugin_installed('UserImporter') %}
     <a class="btn btn-primary mhs" id="user-export" data-toggle="modal" data-target="#modal" data-url="{{path('admin_user_export')}}">导出搜索结果</a>
   {% endif %}
 
