--- a/src/Topxia/WebBundle/Resources/views/OpenCourseLessonManage/lesson-modal.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/OpenCourseLessonManage/lesson-modal.html.twig
@@ -19,7 +19,7 @@
   {% endif %}
   >
 
-  <div class="form-group" {% if lesson %}style="display:none;"{% endif %}>
+  <div class="form-group" style="display:none;">
     <div class="col-md-2 control-label"><label>{{'类型'|trans}}</label></div>
     <div class="col-md-9 controls">
       <div class="radios">
