--- a/src/Topxia/WebBundle/Resources/views/Course/create.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Course/create.html.twig
@@ -20,6 +20,7 @@
             {{'选择类型'|trans}}
           </div>
 
+          <div class="row">
           <div class="col-md-3">
             <div class="course-select active" data-type="normal">
               <i class="es-icon es-icon-putongkecheng "></i>
@@ -56,7 +57,7 @@
               </div>
             </div>
           {% endif %}
-
+          </div>
 
           {% include 'OrgBundle:Org:course-create-org-tree-select.html.twig' %}
 
