--- a/src/Topxia/AdminBundle/Resources/views/Block/index.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Block/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'TopxiaAdminBundle::layout.html.twig' %}
 
-{% set menu = 'admin_block' %}
+{% set menu = menu|default('admin_block') %}
 
 {% set script_controller = 'block/list' %}
 {% block main %}
