--- a/src/Topxia/AdminBundle/Resources/views/OpenCourseAnalysis/Conversion/result-modal.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/OpenCourseAnalysis/Conversion/result-modal.html.twig
@@ -1,6 +1,7 @@
 {% extends 'TopxiaWebBundle::bootstrap-modal-layout.html.twig' %}
 
 {% set modalSize = 'large' %}
+{% set modal_class = 'modal-lg' %}
 
 {% block title %}
   查询结果&nbsp;&nbsp;{{ dateRange.startTime }} - {{ dateRange.endTime }}
@@ -9,6 +10,7 @@
   {% include 'TopxiaAdminBundle:OpenCourseAnalysis/Conversion:order-list.html.twig' %}
 
   <!-- 以下是来源详情 -->
+  {{ render(controller('TopxiaAdminBundle:OpenCourseAnalysis:detailGraph',{request:app.request, id:targetId, showRefererLogList:0 })) }}
 {% endblock %}
 
 {% block footer %}
