--- a/src/Topxia/AdminBundle/Resources/views/OpenCourseAnalysis/Referer/index.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/OpenCourseAnalysis/Referer/index.html.twig
@@ -21,7 +21,7 @@
 				<tbody>
 					{% for refererlog in refererlogAnalysisList %}
 						<tr>
-							<th scope="row">{{refererlog.refererHost}}</th>
+							<th scope="row">{{refererlog.refererName}}</th>
 							<th>{{refererlog.count}}</th>
 							<th>{{refererlog.percent}}</th>
 						</tr>
