--- a/src/Topxia/AdminBundle/Resources/views/OpenCourseAnalysis/Referer/detail.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/OpenCourseAnalysis/Referer/detail.html.twig
@@ -22,7 +22,7 @@
 					<tbody>
 						{% for refererlog in refererlogsDetail %}
 							<tr>
-								<th scope="row">{{refererlog.refererHost}}</th>
+								<th scope="row">{{refererlog.refererName}}</th>
 								<th>{{refererlog.count}}</th>
 								<th>{{refererlog.percent}}</th>
 								<th>{{refererlog.orderCount}}</th>
