--- a/src/Topxia/AdminBundle/Resources/views/OpenCourseAnalysis/Referer/detail-graph.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/OpenCourseAnalysis/Referer/detail-graph.html.twig
@@ -1,11 +1,9 @@
-{% set showRefererLogList = app.request.get('showRefererLogList')|default(1) %}
-
 <div class="row form-group">
 	<div>
     <div  class= "col-md-4" id="echats-pie" style="height: 300px; width: 400px;"></div>
 		<div  class= "col-md-6">
 			
-			{% include 'TopxiaAdminBundle:OpenCourseAnalysis/Parts:referer-detail-list.html.twig' with {showPaginator:0, showRefererHost:1, refererloglist:refererlogsDetail} %}
+			{% include 'TopxiaAdminBundle:OpenCourseAnalysis/Parts:referer-detail-list.html.twig' with {showPaginator:0, showRefererName:1, refererloglist:refererlogsDetail} %}
 
 		</div>
 		<input id="data"  type="hidden" value="{% if refererlogDetailDatas %} {{refererlogDetailDatas}} {% endif %}">
@@ -13,10 +11,4 @@
 	</div>
 </div> 
 
-{% if showRefererLogList %}
-	<div class="row form-group referer-log-list">
-		{% include 'TopxiaAdminBundle:OpenCourseAnalysis/Parts:referer-detail-list.html.twig' with {refererloglist:refererloglist} %}
-	</div>
-{% endif %} 
-
-<script>app.load('open-course-analysis/detail')</script>
+<script>app.load('open-course-analysis/detail-graph')</script>
